kubia-gpu.yaml
apiVersion: v1
kind: Pod
metadata:
 name: kubia-gpu
spec:
  nodeSelector:
    gpu: "true"
  containers:
    - image: nickjohnsonm/kubia
      name: kubia
      ports:
        - containerPort: 8080
          protocol: TCP
