kubia-svc-aff.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-aff
spec:
  sessionAffinity: ClientIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
   app: kubia
