kubia-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-nodeport
spec:
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30124
  selector:
   app: kubia
  type: NodePort
